--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <div class="container">
         <aside class="sidebar">
             <nav class="navigation">
-                <h2>Sections</h2>
+                <h2>Navigation</h2>
+
                 <ul>
-                    <li><a href="#section1">Signup None-integerated </a></li>
-                    <li><a href="#section2">Singup Bugs</a></li>
-                    <li><a href="#section3">Getting Started</a></li>
+                    <li><a href="#section1">Critical Issue Entire App</a></li>
+                    <li><a href="#section2">Created Account without profile info</a></li>
+                    <li><a href="#section3">Re-installed, existing-account issue</a></li>
+
                     <!-- Add more sections as needed -->
                 </ul>
             </nav>
@@ -24,24 +26,19 @@
         <main class="content">
             <h1 class="main-header"> Compelting Intergaration and Fixing Bugs </h1>
             <section id="section1">
-                <h2>Introduction</h2>
+                <h2>Critical Issue Entire App</h2>
 
                 <!--SIGNUP ISSUE START-->
                 <p>
-                    <script src="https://fast.wistia.com/embed/medias/58vgnn4620.jsonp" async></script>
+                    <script src="https://fast.wistia.com/embed/medias/jt7az7osry.jsonp" async></script>
                     <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
-                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-                    <div class="wistia_responsive_wrapper"
-                        style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                        <div class="wistia_embed wistia_async_58vgnn4620 seo=true videoFoam=true"
-                            style="height:100%;position:relative;width:100%">
-                            <div class="wistia_swatch"
-                                style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
-                                <img src="https://fast.wistia.com/embed/medias/58vgnn4620/swatch"
-                                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
-                                    aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
-                            </div>
-                        </div>
+                <div class="wistia_embed wistia_async_jt7az7osry seo=true videoFoam=false"
+                    style="height:700px;position:relative;width:300px">
+                    <div class="wistia_swatch"
+                        style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                        <img src="https://fast.wistia.com/embed/medias/jt7az7osry/swatch"
+                            style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                            aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
                     </div>
                 </div>
                 </p>
@@ -49,12 +46,35 @@
                 <!--SIGNUP ISSUE END-->
             </section>
             <section id="section2">
-                <h2>Installation</h2>
-                <p>Learn how to install GayaanFix React.</p>
+                <h2>Created Account without profile info</h2>
+                <p>
+
+                <div class="wistia_embed wistia_async_39ysqoap9g seo=true videoFoam=false"
+                    style="height:673px;position:relative;width:300px">
+                    <div class="wistia_swatch"
+                        style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                        <img src="https://fast.wistia.com/embed/medias/39ysqoap9g/swatch"
+                            style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                            aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                    </div>
+                </div>
+
+                </p>
             </section>
             <section id="section3">
-                <h2>Getting Started</h2>
-                <p>Get started with GayaanFix React development.</p>
+                <h2>Re-installed, existing-account issue</h2>
+                <p>
+
+                <div class="wistia_embed wistia_async_62lvg27ryr seo=true videoFoam=false"
+                    style="height:673px;position:relative;width:300px">
+                    <div class="wistia_swatch"
+                        style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                        <img src="https://fast.wistia.com/embed/medias/62lvg27ryr/swatch"
+                            style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                            aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                    </div>
+                </div>
+                </p>
             </section>
             <!-- Add more sections as needed -->
         </main>
@@ -62,6 +82,8 @@
     <div class="scrollup-btn" onclick="scrollToTop()">&#8593;</div>
 
     <script src="main.js"></script>
+    <script src="https://fast.wistia.com/embed/medias/58vgnn4620.jsonp" async></script>
+    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
 </body>
 
 </html>
