--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                     <li><a href="#section1">Critical Issue Entire App</a></li>
                     <li><a href="#section2">Created Account without profile info</a></li>
                     <li><a href="#section3">Re-installed, existing-account issue</a></li>
+                    <li><a href="#section4">Signup-Profile info issues</a></li>
+                    <li><a href="#section5">Authentication, signup screen issues</a></li>
 
                     <!-- Add more sections as needed -->
                 </ul>
@@ -72,6 +74,54 @@
                         <img src="https://fast.wistia.com/embed/medias/62lvg27ryr/swatch"
                             style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
                             aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                    </div>
+                </div>
+                </p>
+            </section>
+            <!-- Add more sections as needed -->
+            <section id="section4">
+                <h2>Signup-Profile info issues</h2>
+                <p>
+                    <script src="https://fast.wistia.com/embed/medias/adv5s23cx9.jsonp" async></script>
+                    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                    <div class="wistia_responsive_wrapper"
+                        style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                        <div class="wistia_embed wistia_async_adv5s23cx9 seo=true videoFoam=true"
+                            style="height:100%;position:relative;width:100%">
+                            <div class="wistia_swatch"
+                                style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                                <img src="https://fast.wistia.com/embed/medias/adv5s23cx9/swatch"
+                                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                                    aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </p>
+
+                <br />
+                <a href="https://gayaan.netlify.app/docs/tutorial-basics/mandatoryprofile"> Education and proffesion
+                    values</a>
+            </section>
+            <!-- Add more sections as needed -->
+            <section id="section5">
+                <h2>Authentication, signup screen issues</h2>
+                <p>
+                    <script src="https://fast.wistia.com/embed/medias/d533l0drx3.jsonp" async></script>
+                    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                    <div class="wistia_responsive_wrapper"
+                        style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                        <div class="wistia_embed wistia_async_d533l0drx3 seo=true videoFoam=true"
+                            style="height:100%;position:relative;width:100%">
+                            <div class="wistia_swatch"
+                                style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                                <img src="https://fast.wistia.com/embed/medias/d533l0drx3/swatch"
+                                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                                    aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                            </div>
+                        </div>
                     </div>
                 </div>
                 </p>
