--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#section4">Signup-Profile info issues</a></li>
                     <li><a href="#section5">Authentication, signup screen issues</a></li>
                     <li><a href="#section6">Profile view and Profile compeletion issues</a></li>
-                    <li><a href="#section7">Matching Page/sreen issues</a></li>
+                    <li><a href="#section7">Matching Page/screen issues</a></li>
 
 
                     <!-- Add more sections as needed -->
