--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#section5">Authentication, signup screen issues</a></li>
                     <li><a href="#section6">Profile view and Profile compeletion issues</a></li>
                     <li><a href="#section7">Matching Page/screen issues</a></li>
+                    <li><a href="#section8">Matching functionality issues</a></li>
 
 
                     <!-- Add more sections as needed -->
@@ -165,6 +166,29 @@
                             <div class="wistia_swatch"
                                 style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
                                 <img src="https://fast.wistia.com/embed/medias/bx96tkmloe/swatch"
+                                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                                    aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </p>
+            </section>
+            <!-- Add more sections as needed -->
+            <!-- Add more sections as needed -->
+            <section id="section8">
+                <h2>Matching Page/sreen issues</h2>
+                <p>
+                    <script src="https://fast.wistia.com/embed/medias/2qdv6j2obs.jsonp" async></script>
+                    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                    <div class="wistia_responsive_wrapper"
+                        style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                        <div class="wistia_embed wistia_async_2qdv6j2obs seo=true videoFoam=true"
+                            style="height:100%;position:relative;width:100%">
+                            <div class="wistia_swatch"
+                                style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                                <img src="https://fast.wistia.com/embed/medias/2qdv6j2obs/swatch"
                                     style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
                                     aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
                             </div>
