--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                     <li><a href="#section6">Profile view and Profile compeletion issues</a></li>
                     <li><a href="#section7">Matching Page/screen issues</a></li>
                     <li><a href="#section8">Matching functionality issues</a></li>
+                    <li><a href="#section9">Direct connect,points,subscription & payment issues</a></li>
+                    <li><a href="#section10">Verification and settings issue</a></li>
 
 
                     <!-- Add more sections as needed -->
@@ -177,7 +179,7 @@
             <!-- Add more sections as needed -->
             <!-- Add more sections as needed -->
             <section id="section8">
-                <h2>Matching Page/sreen issues</h2>
+                <h2>Matching functionality issues</h2>
                 <p>
                     <script src="https://fast.wistia.com/embed/medias/2qdv6j2obs.jsonp" async></script>
                     <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
@@ -198,6 +200,50 @@
                 </p>
             </section>
             <!-- Add more sections as needed -->
+            <!-- Add more sections as needed -->
+            <section id="section9">
+                <h2>Direct connect,points,subscription & payment issues</h2>
+                <p>
+                    <script src="https://fast.wistia.com/embed/medias/w5gfks4gba.jsonp" async></script>
+                    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                    <div class="wistia_responsive_wrapper"
+                        style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                        <div class="wistia_embed wistia_async_w5gfks4gba seo=true videoFoam=true"
+                            style="height:100%;position:relative;width:100%">
+                            <div class="wistia_swatch"
+                                style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                                <img src="https://fast.wistia.com/embed/medias/w5gfks4gba/swatch"
+                                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                                    aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </p>
+            </section>
+            <!-- Add more sections as needed -->
+            <section id="section10">
+                <h2>Verification and settings issue</h2>
+                <p>
+                    <script src="https://fast.wistia.com/embed/medias/c9ajpagy7r.jsonp" async></script>
+                    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                    <div class="wistia_responsive_wrapper"
+                        style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                        <div class="wistia_embed wistia_async_c9ajpagy7r seo=true videoFoam=true"
+                            style="height:100%;position:relative;width:100%">
+                            <div class="wistia_swatch"
+                                style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+                                <img src="https://fast.wistia.com/embed/medias/c9ajpagy7r/swatch"
+                                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt=""
+                                    aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </p>
+            </section>
         </main>
     </div>
     <div class="scrollup-btn" onclick="scrollToTop()">&#8593;</div>
